# full-ssh

client/: package-lock.json  package.json
client/app/: page.tsx
client/app/components/: CommandForm.tsx  WebSocketTerminal.tsx
server/: .env  Makefile  docker-compose.yml  pyproject.toml  requirements.txt
server/app/: app.py  config.py
server/app/api/v1/: __init__.py  auth.py  router.py  terminal.py
server/db/: postmaster.pid
server/db/base/5/: pg_internal.init
server/db/global/: 1260  pg_control  pg_internal.init
server/schemas/: auth.py  terminal.py
server/utils/: asyncssh.py  auth.py
